# devkit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: cli.md  getting-started.md  index.md
docs/configuration/: backends.md  index.md
docs/examples/: index.md  tutorials.md
examples/: README.md
examples/arrow/: Dockerfile  README.md
examples/numpy/: Dockerfile  README.md
examples/pybind11/: run-in-docker.py
examples/qupled/: devkit.yml  foga.yml
examples/tutorial/: README.md  run-example.py
examples/tutorial/01-python-only/: Dockerfile  README.md  container-welcome.txt  foga.yml  pyproject.toml  run-docker.sh  run-example.py
examples/tutorial/01-python-only/src/vector_demo/: __main__.py
examples/tutorial/02-pybind11-hello/: Dockerfile  README.md  container-welcome.txt  foga.yml  pyproject.toml  run-docker.sh  run-example.py
examples/tutorial/03-pybind11-tests/: Dockerfile  README.md  container-welcome.txt  foga.yml  pyproject.toml  run-docker.sh  run-example.py
examples/tutorial/04-pybind11-profiles/: Dockerfile  README.md  container-welcome.txt  foga.yml  pyproject.toml  run-docker.sh  run-example.py
skills/foga-blueprint/: SKILL.md
skills/foga-config-authoring/: SKILL.md
skills/github-issue-workflow/: SKILL.md
skills/python-development/: SKILL.md
src/devkit/: __init__.py  cli.py  config.py  errors.py  executor.py  inspect.py  output.py  validate.py
src/foga/cli/: app.py  (+9 more)
tests/: test_adapters.py  test_cli.py  test_config.py  test_examples.py
(+24 files in other folders)
